--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+APScheduler==2.1.2
 Flask==0.10.1
 Jinja2==2.7.3
 MarkupSafe==0.23
 Werkzeug==0.9.6
 argparse==1.2.1
+invoke==0.8.2
+ipython==2.1.0
 itsdangerous==0.24
 lxml==3.3.5
+requests==2.3.0
 wsgiref==0.1.2
 xmltodict==0.9.0
