--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,10 @@ invoke==0.8.2
 ipython==2.1.0
 itsdangerous==0.24
 lxml==3.3.5
+nose==1.3.3
 pyelasticsearch==0.6.1
+python-termstyle==0.1.10
+rednose==0.4.1
 requests==2.3.0
 simplejson==3.5.3
 six==1.7.3
