--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,20 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 PyYAML==3.11
 Werkzeug==0.9.6
+amqp==1.4.5
+anyjson==0.3.3
 argparse==1.2.1
+billiard==3.3.0.18
+celery==3.1.12
 invoke==0.8.2
 ipython==2.1.0
 itsdangerous==0.24
+kombu==3.0.21
 lxml==3.3.5
 nose==1.3.3
 pyelasticsearch==0.6.1
 python-termstyle==0.1.10
+pytz==2014.4
 rednose==0.4.1
 requests==2.3.0
 simplejson==3.5.3
