Celery now handles scheduling, consumers can be installed with invoke install_consumers, consume tasks dynamically imported + added to celery beat schedule

--- a/worker_manager/manifests/plos-manifest.yml
+++ b/worker_manager/manifests/plos-manifest.yml
@@ -6,12 +6,12 @@ scheduler-config:
 
 days: 'mon-fri'
 hour: 23
-minute: 59
+minute: '59'
 
 directory: 'PLoS'
 
-url: 'http://localhost:1338/'
-
+git-url: 'https://github.com/fabianvf/PLoS-API-consumer.git'
+    
 file-format: '.html'
 
 ...
