--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-APScheduler==2.1.2
 Flask==0.10.1
 Jinja2==2.7.3
 MarkupSafe==0.23
 PyYAML==3.11
+SQLAlchemy==0.9.6
 Werkzeug==0.9.6
 amqp==1.4.5
 anyjson==0.3.3
 argparse==1.2.1
+beautifulsoup4==4.3.2
 billiard==3.3.0.18
 celery==3.1.12
 invoke==0.8.2
