--- a/worker_manager/manifests/clinicaltrials.yml
+++ b/worker_manager/manifests/clinicaltrials.yml
@@ -1,12 +1,12 @@
 ---
 
 days: 'mon-fri'
-hour: 14
-minute: 53
+hour: 13
+minute: 45
 
-directory: 'ct'
+directory: 'ClinicalTrials'
 
-name: 'Clinical Trials Registry'
+name: 'ClinicalTrials'
 
 git-url: 'https://github.com/erinspace/ClinicalTrials-consumer.git'
     
