--- a/worker_manager/manifests/clinicaltrials.yml
+++ b/worker_manager/manifests/clinicaltrials.yml
@@ -6,7 +6,7 @@ minute: 45
 
 directory: 'ClinicalTrials'
 
-name: 'ClinicalTrials'
+name: 'Clinical Trials Registry'
 
 git-url: 'https://github.com/erinspace/ClinicalTrials-consumer.git'
     
