--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ celery==3.1.13
 invoke==0.8.2
 itsdangerous==0.24
 kombu==3.0.21
-lxml==3.3.5
+lxml
 nose==1.3.3
 pyelasticsearch==0.6.1
 python-termstyle==0.1.10
