--- a/worker_manager/manifests/scitech.yml
+++ b/worker_manager/manifests/scitech.yml
@@ -4,12 +4,12 @@ days: 'mon-fri'
 hour: 23
 minute: 59
 
-directory: 'SciTech'
+directory: 'scitech'
 
 name: 'SciTech Connect'
 
 git-url: 'https://github.com/fabianvf/pyscitech.git'
-    
+
 file-format: '.xml'
 
 ...
