--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ python-termstyle==0.1.10
 pytz==2014.4
 rednose==0.4.1
 requests==2.3.0
-scrapi-tools==0.3.6
+git+http://github.com/fabianvf/scrapi-tools.git
 simplejson==3.6.0
 six==1.7.3
 wsgiref==0.1.2
