--- a/scrapi/consumers/plos/requirements.txt
+++ b/scrapi/consumers/plos/requirements.txt
@@ -1,10 +1,5 @@
-Flask==0.10.1
-Jinja2==2.7.3
-MarkupSafe==0.23
-Werkzeug==0.9.6
 argparse==1.2.1
-itsdangerous==0.24
 requests==2.3.0
+git+https://github.com/fabianvf/scrapi-tools
 wsgiref==0.1.2
 xmltodict==0.9.0
-git+https://github.com/fabianvf/scrapi-tools.git
