--- a/worker_manager/settings.py.example
+++ b/worker_manager/settings.py.example
@@ -3,6 +3,6 @@ OSF_ENABLED = False
 API_KEY = ''
 APP_ID = ''
 
-NEW_PROJECT_URL = '{prefix}/api/v1/project/new/?api_key={api_key}'.format(prefix=OSF_PREFIX, api_key=API_KEY)
+NEW_PROJECT_URL = '{OSF_PREFIX}/api/v1/{APP_ID}project/?api_key={API_KEY}'.format(**locals())
 
-METADATA_URL = '{prefix}/api/v1/{app_id}/{{guid}}/?api_key={api_key}'.format(prefix=OSF_PREFIX, api_key=API_KEY, app_id=APP_ID)
+METADATA_URL = '{OSF_PREFIX}/api/v1/{APP_ID}/{{guid}}/?api_key={API_KEY}'.format(**locals())
