--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 
 before_install:
     - wget https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.2.1.deb && sudo dpkg -i elasticsearch-1.2.1.deb && sudo service elasticsearch restart
+    - cp worker_manager/settings.py.example worker_manager/settings.py
 
 
 install: "pip install -r requirements.txt"
