fixed spacing and quotes in uiucideals config file

--- a/worker_manager/manifests/uiucideals.yml
+++ b/worker_manager/manifests/uiucideals.yml
@@ -4,7 +4,7 @@ days: 'mon-fri'
 hour: 23
 minute: 59
 
-directory: 'uiuc ideals''
+directory: 'uiuc ideals'
 
 name: 'University of Illinois at Urbana-Champaign IDEALS'
 
