--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,3 @@
-Flask==0.10.1
-Jinja2==2.7.3
-MarkupSafe==0.23
-PyRSS2Gen==1.1
-PyYAML==3.11
-Werkzeug==0.9.6
-amqp==1.4.5
-anyjson==0.3.3
-argparse==1.2.1
-billiard==3.3.0.18
-celery==3.1.13
-itsdangerous==0.24
-kombu==3.0.21
-nose==1.3.3
-pyelasticsearch==0.6.1
-python-termstyle==0.1.10
-pytz==2014.4
-rednose==0.4.1
-requests==2.3.0
-git+http://github.com/fabianvf/scrapi-tools.git
-simplejson==3.6.0
-six==1.7.3
-wsgiref==0.1.2
-invoke==0.8.2
+invoke==0.9.0
+celery==3.1.15
+python-dateutil==2.2
