--- a/scrapi/consumers/stcloud/requirements.txt
+++ b/scrapi/consumers/stcloud/requirements.txt
@@ -1,4 +1,5 @@
-lxml==3.4.0
-requests==2.4.1
-git+http://github.com/fabianvf/scrapi-tools.git
+lxml==3.3.5
+requests==2.3.0
 wsgiref==0.1.2
+nameparser==0.3.3
+python-dateutil==2.2
