--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,7 @@
 language: python
 python:
     - "2.7"
-services:
-    - elasticsearch
 
-before_install:
-    - wget https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.2.1.deb && sudo dpkg -i elasticsearch-1.2.1.deb && sudo service elasticsearch restart
-    - cp worker_manager/settings.py.example worker_manager/settings.py
+install: "pip install -r dev-requirements.txt"
 
-
-install: "pip install -r requirements.txt"
-
-script: nosetests
+script: py.test
