--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
     - "2.7"
 
+services:
+  - cassandra
+
 install: "pip install -r dev-requirements.txt"
 
 before_script: "cp scrapi/settings/local-dist.py scrapi/settings/local.py"
