--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install: "pip install -r dev-requirements.txt"
 
 before_script: "cp scrapi/settings/travis-dist.py scrapi/settings/local.py"
 
-script: py.test tests
+script: py.test --cov scrapi/processing --cov-report=term-missing tests
