--- a/setup.cfg
+++ b/setup.cfg
@@ -8,4 +8,4 @@
 [flake8]
 ignore = E501,E265,F403
 max-line-length = 100
-exclude = .ropeproject, scrapi/consumers, scrapi/consumers/* //
+exclude = .ropeproject, scrapi/harvesters, scrapi/harvesters/* //
