--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,7 @@
 [run]
 omit =
     scrapi/settings/*
+    scripts/*
 
 [report]
 exclude_lines =
@@ -10,3 +11,4 @@ exclude_lines =
 
 omit =
     scrapi/settings/*
+    scripts/*
