--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ nameparser==0.3.3
 python-dateutil==2.2
 fluent-logger==0.3.4
 elasticsearch==1.3.0
+cassandra-driver==2.5.1
 Flask==0.10.1
 blist==1.3.6
 furl==0.4.4
