remove most decode calls

--- a/tox.ini
+++ b/tox.ini
@@ -9,4 +9,4 @@ commands = flake8 --ignore=E402,E731 scrapi
 deps = -rdev-requirements.txt
 commands =
     cp scrapi/settings/travis-dist.py scrapi/settings/local.py
-    invoke test
+    py.test --ignore=tests/test_harvesters.py
