--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,10 @@ envlist = py27, py34, flake8
 
 [testenv:flake8]
 deps = flake8
-commands = flake8 --ignore=E402,E731 scrapi
+commands = flake8 --ignore=E501,E256,F403 scrapi
 
 [testenv]
+whitelist_externals = cp
 deps = -rdev-requirements.txt
 commands =
     cp scrapi/settings/travis-dist.py scrapi/settings/local.py
