--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,5 @@ jsonpointer==1.7
 pycountry==1.10
 djangorestframework==3.1.3
 Django==1.8.2
-jsonfield==1.0.3
 psycopg2==2.6.1
-SQLAlchemy==1.0.6
+django-pgjson==0.3.1
