--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ services:
   - elasticsearch
   - postgres
 
+addons:
+  postgresql: "9.4"
+
 install:
   - pip install -r dev-requirements.txt
   - pip install coveralls
