--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
 
 before_script:
   - flake8 .
-  # - psql -c "CREATE DATABASE scrapi;" -U postgres
+  - psql -c "CREATE DATABASE scrapi;" -U postgres
 
 script:
   - invoke provider_map
