Update tox script to use inv command

--- a/tox.ini
+++ b/tox.ini
@@ -10,4 +10,4 @@ whitelist_externals = cp
 deps = -rdev-requirements.txt
 commands =
     cp scrapi/settings/travis-dist.py scrapi/settings/local.py
-    py.test
+    inv test
